--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.0",
+    "react-numeric-input": "^2.2.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
