--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.0",
     "react-numeric-input": "^2.2.3",
+    "react-progress-button": "^5.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
